chore: suspend cronjob

--- a/aws-dns-updater/cronjob.yaml
+++ b/aws-dns-updater/cronjob.yaml
@@ -32,6 +32,7 @@ metadata:
   annotations:
     fluxcd.io/automated: "true"
 spec:
+  suspend: true
   schedule: "*/3 * * * *"
   successfulJobsHistoryLimit: 2
   failedJobsHistoryLimit: 2
